fixing form input size in search.js, fixing spacing and aligment of items in home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -251,12 +251,6 @@ main {
 
 }
 
-.btn {
-  background-color: var(--primary-color);
-  font-weight: bold;
-}
-.btn:hover {background-color: #DCF763}
-
 .searchForm {
   max-width: 50vw;
   margin: 2vh 5vw;
@@ -280,7 +274,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color:#BFB7B6
 }
 
 .footerMain {
@@ -340,13 +333,29 @@ code {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 0.92em;
     width: 100%;
     overflow-x: hidden;
+  }
+
+  .searchForm {
+    margin: 1rem;
+    padding: 0;
+  }
+
+  .searchForm input {
+    width: 118%;
   }
 
   .collections-container {
     width: 100%;
     height: 100%;
+  }
+
+  .reviews-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .reviews {
